_notes/errbyfile/O00000OO0O00OO.java.txt
ru\metaculture\protection\O00000OO0O00OO.java:12: error: <anonymous 
ru.metaculture.protection.O00000OO0O00OO$1> is not abstract and does not override abstract method 
O00000000(O00000OO0O00) in W233
      O00000OO0OO0 var4 = O00000000(o00000OO0O00, var2, new O00000OO0O0000.W233<Double>() {
                                                                                          ^

  ru\metaculture\protection\O00000OO0O00OO.java:12: error: <anonymous 
ru.metaculture.protection.O00000OO0O00OO$1> is not abstract and does not override abstract method 
O00000000(O00000OO0O00) in W233
        O00000OO0OO0 var4 = O00000000(o00000OO0O00, var2, new O00000OO0O0000.W233<Double>() {
                                                                                            ^
